2005-12-08  Alan Modra  <amodra@bigpond.net.au>

	* reloc.c (enum complain_overflow): Correct comments.
	(bfd_check_overflow): Combine complain_overflow_bitfield and
	complain_overflow_signed code.
	(_bfd_relocate_contents): Likewise.
	(bfd_howto_32): Use complain_overflow_dont.
	* elf32-d10v.c (elf_d10v_howto_table): Revert 2002-06-17 change.
	* bfd-in2.h: Regenerate.

2005-12-07  H.J. Lu  <hongjiu.lu@intel.com>

	* elf.c (assign_section_numbers): Remove extra code in the last
	change.

2005-12-07  H.J. Lu  <hongjiu.lu@intel.com>
	    Andreas Schwab  <schwab@suse.de>

	PR binutils/1991
	* elf.c (assign_section_numbers): Always use the output section
	when setting up sh_link for SHF_LINK_ORDER.

2005-12-07  Thiemo Seufer  <ths@networkno.de>
	    H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/1932
	* bfd-in.h (bfd_elf_record_link_assignment): Add output_bfd
	and hidden arguments.

	* bfd.c (bfd_hide_symbol): Removed.

	* bfd-in2.h: Regenerated.

	* elflink.c (bfd_elf_record_link_assignment): Handle hidden
	symbols which were provided by a linker script.

2005-12-06  Paul Gilliam  <pgilliam@us.ibm.com>

	* cpu-powerpc.c (bfd_powerpc_archs): Add ppc 750.

2005-11-18  Mark Kettenis  <kettenis@gnu.org>

	* elf64-hppa.c (elf64_hppa_section_from_phdr): Create .kernel
	pseudo-section.  Make sure .reg section comes after the proc
	section it's generated from.

2005-12-01  Kazuhiro Inaoka <inaoka.kazuhiro@renesas.com>

	* elf32-m32r.c (m32r_elf_sweep_hook): Fix an illegal duplicate check.
	(m32r_elf_relocate_section): Fix R_M32R_10_PCREL_RELA linkage bug.
	(m32r_elf_gc_sweep_hook): Likewise.
	(m32r_elf_check_relocs): Likewise.

2005-11-24  Alan Modra  <amodra@bigpond.net.au>

	* elf-bfd.h (_bfd_generic_match_sections_by_type): Don't define.
	* libbfd-in.h (_bfd_generic_match_sections_by_type): Delete.
	* libbfd.c (_bfd_generic_match_sections_by_type): Delete.
	* targets.c (bfd_match_sections_by_type): Don't define.
	(BFD_JUMP_TABLE_LINK): Remove _bfd_generic_match_sections_by_type.